--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -48,47 +48,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "rzepa\n",
-            "Configuration finished\n",
-            "Dataset of 14070 samples\n",
-            "label\n",
-            "0    8464\n",
-            "1    5606\n",
-            "Name: count, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9964463397299218\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 44/44 [00:59<00:00,  1.35s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "21962 665\n",
-            "Found 6271 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'rzepa'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
-        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
-        "df_eco = validator(df_eco)\n",
-        "df_eco.to_csv(f\"eco_{corp}.csv\")"
+        "df_final = pd.concat([df_eco, eco_selector(df_rest)])\n",
+        "df_final = validator(df_final)\n",
+        "df_final.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
     {
@@ -100,48 +68,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wyborcza\n",
-            "Configuration finished\n",
-            "Dataset of 5601 samples\n",
-            "label\n",
-            "0    3000\n",
-            "1    2601\n",
-            "Name: count, dtype: int64\n",
-            "Preprocessing ended\n",
-            "Accuracy of model 0.9910873440285205\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 27/27 [01:25<00:00,  3.17s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "13316 1323\n",
-            "Duplicated index!!!\n",
-            "Found 2924 files\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "corp = 'wyborcza'\n",
         "df_rest, df_eco = data_pipeline(corp)\n",
-        "df_eco = pd.concat([df_eco, eco_selector(df_rest, False)])\n",
-        "df_eco = validator(df_eco)\n",
-        "df_eco.to_csv(f\"eco_{corp}.csv\")"
+        "df_final = pd.concat([df_eco, eco_selector(df_rest)])\n",
+        "df_final = validator(df_final)\n",
+        "df_final.to_csv(f\"eco_{corp}.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_final = validator(df_final)\n",
+        "df_final.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
     {
@@ -153,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -163,29 +108,29 @@
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "gpc\n",
             "Configuration finished\n",
-            "Dataset of 5842 samples\n",
+            "Dataset of 7471 samples\n",
             "label\n",
-            "0    3000\n",
-            "1    2842\n",
+            "1    4128\n",
+            "0    3343\n",
             "Name: count, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9880341880341881\n"
+            "Accuracy of model 0.9986631016042781\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 15/15 [00:17<00:00,  1.14s/it]\n"
+            "100%|██████████| 24/24 [00:29<00:00,  1.24s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "7498 1235\n",
+            "11504 1149\n",
             "Duplicated index!!!\n",
-            "Found 3077 files\n"
+            "Found 3278 files\n"
           ]
         }
       ],
@@ -206,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -216,28 +161,28 @@
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
             "polityka\n",
             "Configuration finished\n",
-            "Dataset of 17765 samples\n",
+            "Dataset of 11849 samples\n",
             "label\n",
-            "0    9097\n",
-            "1    8668\n",
+            "1    8700\n",
+            "0    3149\n",
             "Name: count, dtype: int64\n",
             "Preprocessing ended\n",
-            "Accuracy of model 0.9926842993809791\n"
+            "Accuracy of model 0.9873417721518988\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 3/3 [00:05<00:00,  1.70s/it]\n"
+            "100%|██████████| 4/4 [00:12<00:00,  3.16s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1046 156\n",
-            "Found 658 files\n"
+            "1909 220\n",
+            "Found 754 files\n"
           ]
         }
       ],
@@ -265,9 +210,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "dorzeczy\n",
+            "Configuration finished\n",
+            "Dataset of 11342 samples\n",
+            "label\n",
+            "1    8400\n",
+            "0    2942\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9947136563876652\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 2/2 [00:04<00:00,  2.44s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "696 76\n",
+            "Found 242 files\n"
+          ]
+        }
+      ],
       "source": [
         "from datetime import datetime\n",
         "\n",
@@ -289,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -297,14 +274,57 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wprost\n"
+            "wprost\n",
+            "Configuration finished\n",
+            "Dataset of 5279 samples\n",
+            "label\n",
+            "0    2911\n",
+            "1    2368\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9867424242424242\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 2/2 [00:04<00:00,  2.42s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "550 34\n",
+            "Duplicated index!!!\n",
+            "Found 402 files\n"
           ]
         }
       ],
       "source": [
         "corp = 'wprost'\n",
-        "configuration = get_setup(corp)\n",
-        "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
+        "df_eco = validator(df_eco)\n",
+        "df_eco.to_csv(f\"eco_{corp}.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Duplicated index!!!\n",
+            "Found 342 files\n"
+          ]
+        }
+      ],
+      "source": [
         "df_eco = pd.concat([df_eco, df_rest.drop(index=2260)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
@@ -319,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -327,33 +347,42 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "newsweek\n"
+            "newsweek\n",
+            "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
+            "newsweek\n",
+            "Configuration finished\n",
+            "Dataset of 11417 samples\n",
+            "label\n",
+            "1    8452\n",
+            "0    2965\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.989492119089317\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:9: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-            "  df_rest = pd.read_csv(drive_path / corpus / \"results.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
+            "100%|██████████| 2/2 [00:05<00:00,  2.89s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "933 104\n",
             "Duplicated index!!!\n",
-            "Found 378 files\n"
+            "Found 390 files\n"
           ]
         }
       ],
       "source": [
         "corp = 'newsweek'\n",
-        "configuration = get_setup(corp)\n",
-        "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
-        "df_all = pd.concat([df_rest.drop(index=2051), df_eco])\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
         "df_eco = validator(df_eco)\n",
-        "df_all.to_csv(f\"eco_{corp}.csv\")"
+        "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
     },
     {
@@ -365,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -373,32 +402,37 @@
           "output_type": "stream",
           "text": [
             "{1: 'rzepa', 2: 'gpc', 3: 'newsweek', 4: 'wprost', 5: 'dorzeczy', 6: 'polityka', 7: 'wyborcza', 8: 'wpolityce'}\n",
-            "wpolityce\n"
+            "wpolityce\n",
+            "Configuration finished\n",
+            "Dataset of 5298 samples\n",
+            "label\n",
+            "0    2962\n",
+            "1    2336\n",
+            "Name: count, dtype: int64\n",
+            "Preprocessing ended\n",
+            "Accuracy of model 0.9924528301886792\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:7: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-            "  df_eco = pd.read_csv(drive_path / corpus / \"eco_result.csv\", index_col=['id', 'source'], parse_dates=['date'])\n",
-            "/home/ps/Code/Climate/Classification/resources/get_data.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-            "  df_non_eco = pd.read_csv(drive_path / corpus / \"non_eco_result.csv\", index_col = ['id', 'source'], parse_dates=['date'])\n"
+            "100%|██████████| 3/3 [00:23<00:00,  7.90s/it]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Duplicated index!!!\n",
-            "Found 398 files\n"
+            "1362 76\n",
+            "Found 413 files\n"
           ]
         }
       ],
       "source": [
         "corp = 'wpolityce'\n",
-        "configuration = get_setup(corp)\n",
-        "df_eco, df_non_eco, df_rest = get_current_data(configuration)\n",
+        "df_rest, df_eco = data_pipeline(corp)\n",
+        "df_eco = pd.concat([df_eco, eco_selector(df_rest)])\n",
         "df_eco = validator(df_eco)\n",
         "df_eco.to_csv(f\"eco_{corp}.csv\")"
       ]
