--- a/DataPrep/wPolityce/wPolityce.ipynb
+++ b/DataPrep/wPolityce/wPolityce.ipynb
@@ -2,66 +2,103 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "\n",
-    "corpus_path = Path(\"/run/user/1000/gvfs/google-drive:host=gmail.com,user=przemek.7678/GVfsSharedDrives/0AAcFxORfkRfDUk9PVA/13iaeWwq4Ci83lCggiCuLvcIHCSfREE0P/14CVZXy2f6ObWorvYy_xyhSRjIcQAW1nY/1p-pT3Xw8EnoBVFoKtg41s8LqdIlAjxtx\")"
+    "import regex as re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(corpus_path /  \"eco_all.csv\")\n",
-    "df = df.drop(columns='id')\n",
-    "df = df.reset_index()\n",
-    "df.rename(columns={'index':\"id\"}, inplace=True)\n",
-    "df.head()"
+    "df = pd.read_csv(\"wPolityce.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import regex as re\n",
-    "\n",
+    "df['text_raw'] = df['text']\n",
+    "df['date_raw'] = df['date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def decapitalizer(text):\n",
     "    words = re.split(\" \", text)\n",
     "    return \" \".join([word[0] + word[1:].lower() for word in words if len(word) > 1])\n",
-    "\n",
-    "df['text_corrected'] = df['text'].apply(lambda x: re.sub(\"- \", '', x))\n",
-    "df['text_corrected'] = df['text_corrected'].apply(lambda x: re.sub(\" \", \" \", x))\n",
-    "df['text_corrected'] = df['text_corrected'].apply(decapitalizer)"
+    "df['text'] = df['text'].apply(lambda x: re.sub(\"- \", '', x))\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(\" \", \" \", x))\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(\"\\xa0\", \" \", x))\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(\"\\xa029\", \" \", x))\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(\"\\xad \", \"\", x))\n",
+    "df['text'] = df['text'].apply(lambda x: re.sub(\"\\xad\", \" \", x))\n",
+    "df['text'] = df['text'].apply(decapitalizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampled = df.sample(1).iloc[0]\n",
-    "with open('sampled_text.txt', 'w') as f:\n",
-    "    f.write(sampled.text_corrected)"
+    "df.date = df.date.apply(lambda x: re.sub(\" stycznia\\s*\", '.01.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" lutego\\s*\", '.02.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" marca\\s*\", '.03.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" kwietnia\\s*\", '.04.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" maja\\s*\", '.05.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" czerwca\\s*\", '.06.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" lipca\\s*\", '.07.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" sierpnia\\s*\", '.08.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" września\\s*\", '.09.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" października\\s*\", '.10.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" listopada\\s*\", '.11.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\" grudnia\\s*\", '.12.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\"\\sXII\\s*\", '.12.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\"\\sI\\s*\", '.01.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\"\\sIX\\s*\", '.09.', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\"\\sX\\s*\", '.10.', x, flags=re.IGNORECASE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=['text'])\n",
-    "df = df.rename(columns={\"text_corrected\": \"text\"})\n",
-    "df.to_csv(\"eco_corrected.csv\", index=False)"
+    "df.date = df.date.apply(lambda x: re.sub(\"^.*-\", '', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\"\\|.*$\", '', x, flags=re.IGNORECASE))\n",
+    "df.date = df.date.apply(lambda x: re.sub(\"[^\\d\\.]\", '', x, flags=re.IGNORECASE))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['date'] = pd.to_datetime(df['date'], format='%d.%m.%Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=['id']).reset_index().rename(columns={\"index\":'id'}).to_csv(\"wPolityce.csv\", index=False)"
    ]
   }
  ],
