--- a/Classification/Classification.ipynb
+++ b/Classification/Classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -465,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -473,23 +473,38 @@
           "output_type": "stream",
           "text": [
             "eco_rzepa.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
             "eco_gpc.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
             "eco_dorzeczy.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
             "eco_wyborcza.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n",
             "eco_newsweek.csv\n",
+            "368\n",
+            "There are NaNs in the 'date' column.\n",
             "eco_wprost.csv\n",
+            "339\n",
+            "There are NaNs in the 'date' column.\n",
             "eco_wpolityce.csv\n",
-            "eco_polityka.csv\n"
+            "All values in the 'date' column can be parsed to datetime.\n",
+            "eco_polityka.csv\n",
+            "All values in the 'date' column can be parsed to datetime.\n"
           ]
         }
       ],
       "source": [
         "data = []\n",
         "for corp in corps:\n",
+        "    df = pd.read_csv(corp, usecols=['clean_text','date'])\n",
         "    print(corp)\n",
-        "    data.append(pd.read_csv(corp, usecols=['clean_text']))\n",
-        "\n",
-        "df = pd.concat(data)"
+        "    df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
+        "    if df['date'].isnull().any():\n",
+        "        print(len(df[df['date'].isnull()]))\n",
+        "        print(\"There are NaNs in the 'date' column.\")\n",
+        "    else:\n",
+        "        print(\"All values in the 'date' column can be parsed to datetime.\")\n",
+        "    data.append(df)"
       ]
     },
     {
